<resources>
    <string name="title_section1">Products</string>
    <string name="title_section2">Orders</string>
    <string name="title_section3">Customers</string>
    <string name="action_logout">Sign out</string>
    <string name="title_activity_mozu_authentication">MozuAuthenticationActivity</string>
    <string name="title_activity_choose_tenant_and_site">ChooseTenantAndSiteActivity</string>
    <string name="tenant_selection_dialog_title">Choose a Tenant</string>
    <string name="site_selection_dialog_title">Choose a Site</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_default_tenant_site_title">Set as default?</string>
    <string name="set_default_tenant_site_message">Would you like to set this as your default selection? You can change it at any time under settings.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="drawer_open">drawer opened</string>
    <string name="drawer_close">drawer closed</string>
    <string name="hockey_app_id">4fbc83986e51a19bb0c9137e06e88363</string>
    <string name="try_again_app_auth_button_text">Try Again</string>
    <string name="tenant_unavailable_for_account">The current account does not have access to this tenant. Would you like to request access? </string>
    <string name="connection_unavailable">Please check your connection and try again or contact our support team for further assistance.</string>
    <string name="view_as_list_menu_item_text">View as List</string>
    <string name="view_as_grid_menu_item_text">View as Grid</string>
    <string name="action_search">Search</string>
    <string name="no_categories_available">No Categories Found</string>
    <string name="no_products_available">No search results found.</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_image_list">ImageListActivity</string>
    <string name="overview_tab_name">Details</string>
    <string name="properties_tab_name">Properties</string>
    <string name="extras_tab_name">Extras</string>
    <string name="shipping_tab_name">Shipping</string>
    <string name="inventory_tab_name">Inventory</string>
    <string name="prod_detail_reg_price_label">Regular Price</string>
    <string name="prod_detail_msrp_price_label">MSRP</string>
    <string name="prod_detail_map_price_label">MAP</string>
    <string name="prod_detail_includes_label">Includes</string>
    <string name="upc_label">UPC</string>
    <string name="pn_label">P/N</string>
    <string name="distrpn_label">Distr. P/N</string>
    <string name="avail_label">Availability</string>
    <string name="taxable_label">Taxable</string>
    <string name="recurring_label">Recurring</string>
    <string name="full_description_click_link"> - Full Description</string>
    <string name="show_less_click_link"> - Short Description</string>
    <string name="weight_label">Weight</string>
    <string name="meansurment_label">Measurements</string>
    <string name="prod_detail_inventory_table_code_header">Code</string>
    <string name="prod_detail_inventory_table_name_header">Name</string>
    <string name="prod_detail_inventory_table_available_header">Available</string>
    <string name="prod_detail_inventory_table_on_hand_header">On Hand</string>
    <string name="prod_detail_inventory_table_on_reserve_header">On Reserve</string>
    <string name="order_list_order_no_header">Order No.</string>
    <string name="order_list_order_first_name_header">First Name</string>
    <string name="order_list_order_last_name_header">Last Name</string>
    <string name="order_list_order_status_header">Status</string>
    <string name="order_list_order_total_header">Total</string>
    <string name="order_list_date_header">Date</string>
    <string name="order_list_order_email_header">Email</string>
    <string name="order_list_order_payment_status_header">Payment Status</string>
    <string name="fullfillment_tab_name">Fulfillment</string>
    <string name="payment_tab_name">Payment</string>
    <string name="returns_tab_name">Returns</string>
    <string name="notes_tab_name">Notes</string>
    <string name="title_activity_order_detail">OrderDetailActivity</string>
    <string name="blank_for_alignment">Blank For Alignment</string>
    <string name="payments_header">Payments</string>
    <string name="order_total">ORDER TOTAL</string>
    <string name="payments_received">RECEIVED</string>
    <string name="balance">BALANCE</string>
    <string name="returns_header">Returned Items</string>
    <string name="replaced_total">REPLACED</string>
    <string name="refunded_total">REFUNDED</string>
    <string name="total_returned_items">TOTAL RETURNS</string>
    <string name="date_return_header">Date</string>
    <string name="code_return_header">Code</string>
    <string name="product_return_header">Product</string>
    <string name="price_return_header">Price</string>
    <string name="return_type_header">Type</string>
    <string name="return_quantity_header">Quantity</string>
    <string name="internal_notes_header">Internal Notes</string>
    <string name="customer_notes_header">Customer Notes</string>
    <string name="show_internal_notes_text">Show Internal Notes</string>
    <string name="show_customer_notes_text">Show Customer Notes</string>
    <string name="date_notes_header">Date</string>
    <string name="comment_notes_header">Comment</string>
    <string name="ordered_items_header">Ordered Items</string>
    <string name="order_item_code_header">Code</string>
    <string name="order_item_product_header">Product</string>
    <string name="order_item_price_header">Price</string>
    <string name="order_item_quantity_header">Quantity</string>
    <string name="order_item_total_header">Total</string>
    <string name="total_order_detail_overview">Total:</string>
    <string name="items_total_detail_overview">Items Total:</string>
    <string name="discounts_detail_overview">Discounts:</string>
    <string name="coupons_detail_overview">Coupons</string>
    <string name="subtotal_detail_overview">Sub-Total:</string>
    <string name="shipping_detail_overview">Shipping</string>
    <string name="shipping_discounts_detail_overview">Shipping Discounts:</string>
    <string name="tax_detail_overview">Tax:</string>
    <string name="direct_ship_header">Direct Ship Items</string>
    <string name="shipment_pending_total">Pending</string>
    <string name="fulfilled_total">Fulfilled</string>
    <string name="total">Total</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="error_message_for_order_customer_name">N/A - Could Not Retreive</string>
    <string name="attributes_items_header">Attributes</string>
    <string name="order_search_hint_text">Search by Order No. or Email Address</string>
    <string name="empty_order_items_text">No Items To Display.</string>
    <string name="empty_payments_message_string">No Payments Exist.</string>
    <string name="product_code_header">Code</string>
    <string name="product_name_header">Name</string>
    <string name="product_price_header">Price</string>
    <string name="product_sales_price_header">Sale Price</string>
    <string name="refresh_product_menu_item_text">Refresh Products</string>
    <string name="refresh_category_menu_item_text">Refresh</string>
    <string name="pending_items_direct_ship_label_unpackaged">Pending Items</string>
    <string name="pending_items_direct_ship_label_fulfilled">Shipped Items</string>
    <string name="pending_items_direct_ship_label_not_fulfilled">Created Items</string>
    <string name="package_number_string">Package #</string>
    <string name="fulfillment_items_label">item(s)</string>
    <string name="ship_to_label">SHIP TO</string>
    <string name="shipping_label">SHIPPING</string>
    <string name="packaging_type_label">PACKAGING TYPE</string>
    <string name="tracking_number_label">TRACKING NUMBER</string>
    <string name="status_label">STATUS</string>
    <string name="date_label">DATE</string>
    <string name="package_item_header_code">Code</string>
    <string name="package_item_header_product">Product Name</string>
    <string name="package_item_header_quantity">Quantity</string>
    <string name="in_store_header">In-Store Pickup Items</string>
    <string name="pickup_fulfillment_pending">Pending</string>
    <string name="pickup_fulfillment_fulfilled">Fulfilled</string>
    <string name="fulfillment_pickup_number">Pickup #</string>
    <string name="pickup_pickedup_total_string">Picked-Up</string>
    <string name="pickup_pending_total_string">Pending</string>
    <string name="not_picked_up">Pending Pickups</string>
    <string name="picked_up">Picked-up</string>
    <string name="pickup_header_text">Pickup</string>
    <string name="product_search_hint">Search by Product Name, Product ID or Manufacturer</string>
    <string name="customers_search_hint">Search by Customer Name or Email Address</string>
    <string name="global_search_hint">Search for Products, Orders or Customers</string>
    <string name="refresh_product_detail_menu_item_text">Refresh Product</string>
    <string name="refresh_orders_menu_item_text">Refresh Orders</string>
    <string name="refresh_order_detail_menu_item_text">Refresh Order</string>
    <string name="customer_list_customer_no_header">Customer No.</string>
    <string name="customer_list_date_header">Last Name</string>
    <string name="customer_list_customer_first_name_header">First Name</string>
    <string name="customer_list_customer_email_header">Email</string>
    <string name="customer_list_customer_lifetime_value_header">Lifetime Value</string>
    <string name="refresh_customers_menu_item_text">Refresh Customers</string>
    <string name="customer_search_hint_text">Search by Customer Name or Email Address</string>
    <string name="employee_header">Employee</string>
    <string name="bill_to">Bill To</string>
    <string name="payment_method">Method</string>
    <string name="payment_status">Status</string>
    <string name="payment_date">Date</string>
    <string name="customer_credit_code">Code</string>
    <string name="customer_credit_date_issued">Date Issued</string>
    <string name="customer_credit_amount">Amount</string>
    <string name="customer_credit_expires">Expires</string>
    <string name="customer_credit_balance">Balance</string>
    <string name="customer_wishlist_product">Product</string>
    <string name="customer_wishlist_price">Price</string>
    <string name="customer_wishlist_saleprice">Sale Price</string>
    <string name="customer_wishlist_qty">Qty</string>
    <string name="customer_wishlist_purchasable">Purchasable</string>
    <string name="customer_wishlist_date_added">Date Added</string>
    <string name="store_credit_type_label">Type</string>
    <string name="product_title_header">Title</string>
    <string name="return_loss_header">Loss</string>
    <string name="return_restockable_header">Restockable</string>
    <string name="return_reason_header">Reason</string>
    <string name="return_quantity_returned_header">"Qty Ret'd"</string>
    <string name="refund_payment_type">PaymentType</string>
    <string name="refund_payment_cardtype">CardType</string>
    <string name="refund_payment_cardnumber">CardNumber</string>
    <string name="refund_payment_amount_credited">Amount Credited</string>
    <string name="cancel">Cancel</string>
    <string name="product_fullfilment_header">Fulfillment</string>
    <string name="product_quantity_header">Quantity</string>
    <string name="product_total_header">Item Total</string>
    <string name="product_save">Save</string>
    <string name="capture">Capture</string>
    <string name="enter_payment_amount">Enter Amount to capture</string>
    <string name="capture_payment">Capture Payment</string>
</resources>