<?xml version="1.0" encoding="utf-8"?>
<com.mozu.mozuandroidinstoreassistant.app.layout.order.OrderReturnHeaderItemRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@drawable/list_item_background"
    android:minHeight="64dp"
    android:layout_height="wrap_content">

    <TextView
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:textSize="14sp"
        android:textColor="@color/light_gray_text"
        android:text="@string/product_code_header"
        android:layout_height="match_parent" />
    <TextView
        android:gravity="center_vertical"
        android:textSize="14sp"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:textColor="@color/light_gray_text"
        android:text="@string/product_title_header"
        android:layout_height="match_parent" />
    <TextView
        android:gravity="center_vertical"
        android:textSize="14sp"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:textColor="@color/light_gray_text"
        android:text="@string/product_price_header"
        android:layout_height="match_parent" />
    <TextView
        android:gravity="center_vertical"
        android:textSize="14sp"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:textColor="@color/light_gray_text"
        android:text="@string/return_loss_header"
        android:layout_height="match_parent" />
    <TextView
        android:gravity="center_vertical|right"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:textSize="14sp"
        android:text="@string/return_restockable_header"
        android:layout_height="match_parent" />
    <TextView
        android:layout_weight="1"
        android:layout_width="0dp"
        android:textSize="14sp"
        android:gravity="right|center_vertical"
        android:textColor="@color/light_gray_text"
        android:text="@string/return_reason_header"
        android:layout_height="match_parent" />
    <TextView
        android:layout_weight="1"
        android:layout_width="0dp"
        android:textColor="@color/light_gray_text"
        android:textSize="14sp"
        android:gravity="right|center_vertical"
        android:text="@string/return_quantity_header"
        android:layout_height="match_parent" />
    <TextView
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:textColor="@color/light_gray_text"
        android:textSize="14sp"
        android:gravity="right|center_vertical"
        android:text="@string/return_quantity_returned_header"
        android:layout_height="match_parent" />
    </com.mozu.mozuandroidinstoreassistant.app.layout.order.OrderReturnHeaderItemRow>
