<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="64dp">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/customer_credit_code"
            android:textSize="14sp"
            android:textColor="@color/light_gray_text"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/store_credit_type_label"
            android:textSize="14sp"
            android:textColor="@color/light_gray_text"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/customer_credit_date_issued"
            android:textSize="14sp"
            android:textColor="@color/light_gray_text"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/customer_credit_expires"
            android:textSize="14sp"
            android:textColor="@color/light_gray_text"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/customer_credit_amount"
            android:textSize="14sp"
            android:textColor="@color/light_gray_text"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/customer_credit_balance"
            android:textSize="14sp"
            android:textColor="@color/light_gray_text"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/divider_black" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/divider_white" />

    <com.mozu.mozuandroidinstoreassistant.app.views.LoadingView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/customer_credit_loading">

        <ListView
            android:id="@+id/customer_credit_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.mozu.mozuandroidinstoreassistant.app.views.LoadingView>

</LinearLayout>
