<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="64dp">

        <TextView
            android:textColor="@color/light_gray_text"
            android:textSize="14sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/customer_wishlist_product"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/customer_wishlist_price"
            android:textColor="@color/light_gray_text"
            android:textSize="14sp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/customer_wishlist_saleprice"
            android:textColor="@color/light_gray_text"
            android:textSize="14sp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/customer_wishlist_qty"
            android:textColor="@color/light_gray_text"
            android:textSize="14sp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/customer_wishlist_purchasable"
            android:textColor="@color/light_gray_text"
            android:textSize="14sp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/customer_wishlist_date_added"
            android:textColor="@color/light_gray_text"
            android:textSize="14sp"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/divider_black" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/divider_white" />

    <com.mozu.mozuandroidinstoreassistant.app.views.LoadingView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/customer_wishlist_loading">

        <ListView
            android:id="@+id/customer_wishlist"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.mozu.mozuandroidinstoreassistant.app.views.LoadingView>

</LinearLayout>
