<?xml version="1.0" encoding="utf-8"?>
<com.mozu.mozuandroidinstoreassistant.app.layout.order.OrderRefundHeaderItemRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:minHeight="64dp"
    android:background="@drawable/list_item_background"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:layout_height="wrap_content">
    <TextView
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:textSize="14sp"
        android:textColor="@color/light_gray_text"
        android:text="@string/refund_payment_type"
        android:layout_height="match_parent" />

    <TextView
        android:gravity="center_vertical"
        android:textSize="14sp"
        android:textColor="@color/light_gray_text"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:text="@string/refund_payment_cardtype"
        android:layout_height="match_parent" />

    <TextView
        android:gravity="center_vertical"
        android:textSize="14sp"
        android:textColor="@color/light_gray_text"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:text="@string/refund_payment_cardnumber"
        android:layout_height="match_parent" />

    <TextView
        android:gravity="center_vertical"
        android:textSize="14sp"
        android:textColor="@color/light_gray_text"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:text="@string/refund_payment_amount_credited"
        android:layout_height="match_parent" />
</com.mozu.mozuandroidinstoreassistant.app.layout.order.OrderRefundHeaderItemRow>
