<?xml version="1.0" encoding="utf-8"?>

<com.mozu.mozuandroidinstoreassistant.app.layout.order.FullfillmentColumnRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="16dp"
    android:layout_marginStart="40dp"
    android:layout_marginTop="16dp"
    android:gravity="center_vertical"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:text="@string/order_item_product_header"
        android:textColor="@color/light_gray_text"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:gravity="right"
        android:text="@string/order_item_price_header"
        android:textColor="@color/light_gray_text"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:gravity="right"
        android:text="@string/order_item_quantity_header"
        android:textColor="@color/light_gray_text"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:gravity="right"
        android:text="@string/order_item_total_header"
        android:textColor="@color/light_gray_text"
        android:textSize="14sp"/>

    <CheckBox
        android:id="@+id/select_all"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_weight="0.3"
        android:gravity="right"/>

</com.mozu.mozuandroidinstoreassistant.app.layout.order.FullfillmentColumnRow>
